[tool.poetry]
name = "tests-github-actions"
version = "0.1.1"
description = "Package only tests Github Actions"
authors = ["William C. Canin <william.costa.canin@gmail.com>"]
readme = "README.rst"
license = "MIT license"
keywords=["tests", "github", "actions"]
homepage = "https://github.com/williamcanin/tests-github-actions"
repository = "https://github.com/williamcanin/tests-github-actions"
include = ["LICENSE"]

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
tox = "^3.23.1"
isort = "^5.8.0"
black = "^21.5b1"
flake8 = "^3.9.2"
mypy = "^0.812"


[tool.black]
line-length = 88
target-version = ['py38']
include = '\.pyi?$'
exclude = '''

(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | \venv
    | buck-out
    | build
    | _build
    | venv
    | dist
    | docs
    | tmp
  )/
)
'''

[tool.isort]
profile = "black"
multi_line_output = 3
src_paths = ["tests_github_actions", "tests"]
line_length = 88
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true

[tool.pytest.ini_options]
minversion = "6.0"
cache_dir = "/tmp/.pytest_cache"
# addopts = "-ra -q"
testpaths = ["tests"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
